<resources>
    <string name="app_name">Calculator</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atg">atg</string>
    <string name="sum">+</string>
    <string name="all_clean">AC</string>
    <string name="clean">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="pow">^</string>
    <string name="result">=</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="item_title">Geometry</string>
    <string name="algebra">Algebra</string>
    <string name="nan">NaN</string>
</resources>
